update search css and fix some posts not showing up

--- a/public/stylesheets/forum-addpost.css
+++ b/public/stylesheets/forum-addpost.css
@@ -82,6 +82,8 @@
   cursor:pointer;
   overflow: hidden;
   outline:none;
+
+  margin-right: 10px;
 }
 
 .submitdiv {
